width and height for images on catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -907,19 +907,25 @@
                 data-rec-p="97" data-min-y="2022" data-rec-y="2019">3</span>
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-5-3600/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp"
+                  class="product__image">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -999,13 +1005,18 @@
 
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-5-5600/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62c95bc6807c3766180073.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62c95bc6807c3766180073.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62c95bc6807c3766180073.webp 920w,
@@ -1094,13 +1105,18 @@
                 data-rec-p="100" data-min-y="2023" data-rec-y="2023">5</span>
 
               <a class="product__link product__image-wrapper" href="/ru/intel-core-i7-12700kf/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62991f9ddc318763483794.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62991f9ddc318763483794.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62991f9ddc318763483794.webp 920w,
@@ -1189,13 +1205,18 @@
                 data-rec-p="89" data-min-y="2020" data-rec-y="2014">1</span>
 
               <a class="product__link product__image-wrapper" href="/ru/intel-core-i3-10100f/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62e63b56b214d798741318.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62e63b56b214d798741318.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62e63b56b214d798741318.webp 920w,
@@ -1284,13 +1305,18 @@
                 data-rec-p="98" data-min-y="2022" data-rec-y="2019">3</span>
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-5-5500/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62c95bcc70099114062751.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62c95bcc70099114062751.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62c95bcc70099114062751.webp 920w,
@@ -1379,13 +1405,18 @@
                 data-rec-p="85" data-min-y="2019" data-rec-y="2016">1</span>
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-5-2600/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62e680e8993d7639410982.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62e680e8993d7639410982.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62e680e8993d7639410982.webp 920w,
@@ -1474,19 +1505,25 @@
                 data-rec-p="63" data-min-y="2014" data-rec-y="2012">1</span>
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-5-2400ge/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62e6880abdf5c043922581.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62e6880abdf5c043922581.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62e6880abdf5c043922581.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/62e6880abdf5c043922581.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/62e6880abdf5c043922581.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/62e6880abdf5c043922581.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/62e6880abdf5c043922581.webp"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1569,19 +1606,25 @@
                 data-rec-p="63" data-min-y="2014" data-rec-y="2012">1</span>
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-3-3200g/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62e686ffa1a3d127190633.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62e686ffa1a3d127190633.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62e686ffa1a3d127190633.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/62e686ffa1a3d127190633.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/62e686ffa1a3d127190633.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/62e686ffa1a3d127190633.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/62e686ffa1a3d127190633.webp"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1664,19 +1707,25 @@
                 data-rec-p="100" data-min-y="2023" data-rec-y="2023">5</span>
 
               <a class="product__link product__image-wrapper" href="/ru/intel-core-i7-11700f/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62a2f04d82a0f818316631.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62a2f04d82a0f818316631.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62a2f04d82a0f818316631.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/62a2f04d82a0f818316631.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/62a2f04d82a0f818316631.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/62a2f04d82a0f818316631.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/62a2f04d82a0f818316631.webp"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1759,19 +1808,25 @@
                 data-rec-p="100" data-min-y="2023" data-rec-y="2023">5</span>
 
               <a class="product__link product__image-wrapper" href="/ru/intel-core-i7-12700k/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/6298f85400622498537025.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/6298f85400622498537025.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/6298f85400622498537025.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/6298f85400622498537025.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/6298f85400622498537025.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/6298f85400622498537025.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/6298f85400622498537025.webp"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1851,19 +1906,25 @@
 
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-7-5700x/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62c959c714fe6245541571.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62c959c714fe6245541571.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62c959c714fe6245541571.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/62c959c714fe6245541571.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/62c959c714fe6245541571.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/62c959c714fe6245541571.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/62c959c714fe6245541571.webp"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1946,19 +2007,25 @@
                 data-rec-p="63" data-min-y="2014" data-rec-y="2012">1</span>
 
               <a class="product__link product__image-wrapper" href="/ru/amd-ryzen-3-3200ge/">
-                <img loading="lazy" sizes="(max-width: 454px) calc(100vw - 10px),
+                <img
+                  width="303"
+                  height="170"
+                  loading="lazy"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
                          (max-width: 548px) 444px,
                          (max-width: 608px) calc(100vw - 164px),
                          (max-width: 683px) 444px,
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
-                         303px" data-source-format="png"
+                         303px"
+                  data-source-format="png"
                   srcset="./thumbs/s/320_0/uploads/images/items/62e6870544bed959528300.webp 320w,
                           ./thumbs/s/640_0/uploads/images/items/62e6870544bed959528300.webp 640w,
                           ./thumbs/s/920_0/uploads/images/items/62e6870544bed959528300.webp 920w,
                           ./thumbs/s/1220_0/uploads/images/items/62e6870544bed959528300.webp 1220w,
                           ./thumbs/s/1920_0/uploads/images/items/62e6870544bed959528300.webp 1920w"
-                  src="./thumbs/s/0_0/uploads/images/items/62e6870544bed959528300.webp" class="product__image  ">
+                  src="./thumbs/s/0_0/uploads/images/items/62e6870544bed959528300.webp"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -2064,7 +2131,7 @@
     </main>
     <footer class="footer">
       <div class="footer__item about-block">
-        <img src="./img/main-logo.svg" class="footer__logo">
+        <img src="./img/main-logo.svg" class="footer__logo" width="50" height="50">
         <div class="about-block__info">
           Каталог Salamander дает возможность вам легко собрать компьютер вашей мечты а затем купить все нужные
           комплектующие по лучшим ценам в надежных магазинах!
@@ -2157,11 +2224,11 @@
 
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./js/simplebar.min.js"></script>
-  <script src="./js/main.js"></script>
+  <!-- <script src="./js/main.js"></script> -->
   <script src="./js/qrcode.min.js"></script>
 
 
-  <script src="./js/script.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
