images width and height on item page

--- a/catalog.html
+++ b/catalog.html
@@ -2224,11 +2224,11 @@
 
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./js/simplebar.min.js"></script>
-  <!-- <script src="./js/main.js"></script> -->
+  <script src="./js/main.js"></script>
   <script src="./js/qrcode.min.js"></script>
 
 
-  <!-- <script src="./js/script.js"></script> -->
+  <script src="./js/script.js"></script>
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
