images width and height on assembly page

--- a/item.html
+++ b/item.html
@@ -31,7 +31,7 @@
 <body class="ru">
   <header class="header">
     <div class="header__container">
-      <a style="width: 234px" href="/ru/" class="header__logo logo-header">
+      <a href="/ru/" class="header__logo logo-header">
         <span class="logo-header__icon main-icon"></span>
         <div class="logo-header__text">
           <p class="logo-header__title">Salamander</p>
