--- a/assembly.html
+++ b/assembly.html
@@ -986,9 +986,13 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/intel-core-i5-12400f/" class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png"
+                             356px"
+                      data-source-format="png"
                       srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
@@ -1074,9 +1078,13 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/gigabyte-radeon-rx-6500-xt-gaming-oc-4g/" class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png"
+                             356px"
+                      data-source-format="png"
                       srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
@@ -1170,9 +1178,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/gigabyte-b660-gaming-x/" class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px"
+                      data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1268,9 +1281,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/deepcool-pf600-600w/" class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px"
+                      data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1346,9 +1364,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/aerocool-aero-one-eclipse-black/" class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px"
+                      data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1431,9 +1454,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/kingston-nv2-nvme-ssd-250gb-m2-2280/" class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px"
+                      data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1522,9 +1550,14 @@
                 <div class="product__wrapper">
                   <a href="/ua/kingston-fury-beast-8gb-ddr4-3200-mhz-kf432c16bb8/"
                     class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px"
+                      data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1622,9 +1655,14 @@
                 <div class="product__wrapper">
                   <a href="/ua/kingston-fury-beast-8gb-ddr4-3200-mhz-kf432c16bb8/"
                     class="product__link product__image-wrapper">
-                    <img sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img
+                      width="356"
+                      height="179"
+                      sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px"
+                      data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1706,7 +1744,7 @@
     </main>
     <footer class="footer">
       <div class="footer__item about-block">
-        <img src="./img/main-logo.svg" class="footer__logo">
+        <img src="./img/main-logo.svg" class="footer__logo" width="50" height="50">
         <div class="about-block__info">
           Каталог Salamander дает возможность вам легко собрать компьютер вашей мечты а затем купить все нужные
           комплектующие по лучшим ценам в надежных магазинах!
