--- a/assembly.html
+++ b/assembly.html
@@ -1836,11 +1836,11 @@
   <script src="./js/nouislider.min.js"></script>
 
   <script src="./js/swiper-bundle.min.js"></script>
-  <script src="./js/main.js"></script>
+  <!-- <script src="./js/main.js"></script> -->
   <script src="./js/qrcode.min.js"></script>
 
 
-  <script src="./js/script.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
