--- a/assembly.html
+++ b/assembly.html
@@ -1836,7 +1836,7 @@
   <script src="./js/nouislider.min.js"></script>
 
   <script src="./js/swiper-bundle.min.js"></script>
-  <!-- <script src="./js/main.js"></script> -->
+  <script src="./js/main.js"></script>
   <script src="./js/qrcode.min.js"></script>
 
 
