disabled script.js for test

--- a/assembly.html
+++ b/assembly.html
@@ -1840,7 +1840,7 @@
   <script src="./js/qrcode.min.js"></script>
 
 
-  <script src="./js/script.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
