enabled script js

--- a/assembly.html
+++ b/assembly.html
@@ -954,7 +954,7 @@
           </section>
           <section class="assemblage__conflicts conflicts">
 
-            <div class="conflicts__title" data-conflicts-num="1">1 Конфликта</div>
+            <div class="conflicts__title" data-conflicts-num="1">1 конфликт</div>
             <div class="conflicts__body">
 
               <p class="conflicts__item " data-conflict-id="0">Тип памяти не подходит для данной материнской платы.</p>
@@ -1840,7 +1840,7 @@
   <script src="./js/qrcode.min.js"></script>
 
 
-  <!-- <script src="./js/script.js"></script> -->
+  <script src="./js/script.js"></script>
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
